# cultionet

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml
dockerfiles/: Dockerfile_cpu  Dockerfile_cuda102  Dockerfile_cuda113  Dockerfile_cuda115  Dockerfile_cuda116  Dockerfile_cuda117_torch2.0  Dockerfile_cuda118_torch2.0  Dockerfile_cuda121_torch2.1  README.md
docs/: cuda_installation.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: cultionet.augment.rst  cultionet.data.rst  cultionet.errors.rst  cultionet.fit.rst  cultionet.losses.rst  cultionet.models.rst  cultionet.networks.rst  cultionet.predict.rst  cultionet.rst  cultionet.scripts.rst  cultionet.utils.rst  modules.rst
scripts/: 01a_create_data.sh  01b_create_predict_batch.sh  02a_train.sh  02b_train.sh  02c_refine.sh  03_predict_batch.sh  config.yml  create_dataset.py  create_train_files.py  move_and_reshape_data.py  predict_image.py  predict_test.py  train_model.py
src/cultionet/: __init__.py  callbacks.py  loggers.py  model.py
src/cultionet/augment/: augmentation.py  augmenter_utils.py  augmenters.py
src/cultionet/data/: const.py  create.py  data.py  datasets.py  lookup.py  modules.py  samplers.py  spatial_dataset.py  store.py  utils.py
src/cultionet/enums/: __init__.py
src/cultionet/errors/: __init__.py
src/cultionet/layers/: base_layers.py  encodings.py  weights.py
src/cultionet/losses/: __init__.py  losses.py  topological.py
src/cultionet/models/: base_layers.py  convstar.py  crop.py  cultio.py  cultionet.py  dexined.py  enums.py  field_of_junctions.py  graph.py  hed.py  inception.py  kernels.py  lightning.py  ltae.py  maskcrnn.py  model_utils.py  nunet.py  nunet_old.py  positional_encoding.py  rcsb.py  refinement.py  regression.py  tcn.py  temporal_attention.py  temporal_transformer.py  time_attention.py  unet_parts.py
src/cultionet/networks/: __init__.py  _build_network.pyx
src/cultionet/nn/: __init__.py  functional.py
src/cultionet/nn/modules/: activations.py  attention.py  convolution.py  convolution_old.py  dropout.py  geo_encoding.py  kernels.py  reshape.py  spherical_harmonics_closed_form.py  unet_parts.py  unet_parts_old.py  utils.py
src/cultionet/scripts/: args.yml  config.yml  cultionet.py
src/cultionet/utils/: geometry.py  logging.py  model_preprocessing.py  normalize.py  project_paths.py  reshape.py  stats.py
tests/: _test_create_dataset.py  _test_cultionet.py  _test_dataset.py  _test_loss.py  _test_predict.py  _test_reshape.py  _test_train.py  conftest.py  test_augmentation.py  test_create_dataset.py  test_cultionet.py  test_data.py  test_data_splits.py  test_dataset.py  test_loss.py  test_ltae.py  test_norm.py  test_reshape.py  test_temporal_attention.py  test_temporal_transformer.py  test_tower_unet.py  test_train.py
tests/data/: __init__.py  config.yml  estimates.tif  last.norm
tests/data/time_series_vars/000064/evi2/: 2020001.tif  2020032.tif  2020061.tif  2020092.tif  2020122.tif  2020153.tif  2020183.tif  2020214.tif  2020245.tif  2020275.tif  2020306.tif  2020336.tif  2021001.tif
tests/data/time_series_vars/000064/gcvi/: 2020001.tif  2020032.tif  2020061.tif  2020092.tif  2020122.tif  2020153.tif  2020183.tif  2020214.tif  2020245.tif  2020275.tif  2020306.tif  2020336.tif  2021001.tif
tests/data/time_series_vars/000064/kndvi/: 2020001.tif  2020032.tif  2020061.tif  2020092.tif  2020122.tif  2020153.tif  2020183.tif  2020214.tif  2020245.tif  2020275.tif  2020306.tif  2020336.tif  2021001.tif
tests/data/train/processed/: data_000002_2022_0_none.pt
tests/data/train/small_chips/: data_means.npz  data_quantiles.npz  data_vars.npz  ref_data_vars_median.npz
tests/data/train/small_chips/processed/: data_6042f5011513925502bae494e4ccfd2b_2022_1_none.pt  data_604cf7221bd7b51350497703d52cdd51_2021_1_none.pt  data_60c35f96873823572b8238a2fb276335_2022_1_none.pt
tests/data/user_train/: 000064_grid_2021.gpkg  000064_poly_2021.gpkg
