[semantic_release]
version_variable = src/cultionet/__init__.py:__version__
branch = main
upload_to_release = true

[metadata]
name = cultionet
description =
url = https://github.com/jgrss/cultionet
license = LICENSE.txt
version = attr: cultionet.__version__
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific :: Agriculture
    Topic :: Scientific :: Neural Network
    Topic :: Scientific :: Segmentation
    Programming Language :: Cython
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    cython>=0.29.0
install_requires =
    attrs>=21.0
    frozendict>=2.2.0
    frozenlist>=1.3.0
    numpy>=1.22.0
    scipy>=1.5.0
    pandas>=1.*,<=1.3.5
    geopandas>=0.10.0
    rasterio
    shapely>=1.8.0
    scikit-image>=0.19.0
    xarray>=2022.6.0
    opencv-python>=4.5.5.0
    decorator==4.4.2
    rtree>=0.9.7
    graphviz>=0.19.0
    tqdm>=4.62.*
    pyDeprecate==0.3.1
    future>=0.17.1
    tensorboard>=2.2.0
    PyYAML>=5.1
    pytorch_lightning>=1.7.6
    torchmetrics>=0.10.0,<0.11.0
    ray>=2.0.0
    geowombat@git+https://github.com/jgrss/geowombat.git@v2.0.19
    tsaug@git+https://github.com/jgrss/tsaug.git
    geosample@git+https://github.com/jgrss/geosample.git
    setuptools>=65.5.1;python_version>='3.8.12'

[options.extras_require]
docs = numpydoc
    sphinx
    sphinx-automodapi

[options.entry_points]
console_scripts =
    cultionet = cultionet.scripts.cultionet:main

[options.packages.find]
where=src
exclude=
    data
    notebooks
    tests

[options.package_data]
* = *.md, *.txt
cultionet = scripts/*.yml
