[semantic_release]
version_variable = src/cultionet/__init__.py:__version__
branch = main
upload_to_release = true

[metadata]
name = cultionet
description =
url = https://github.com/jgrss/cultionet
license = LICENSE.txt
version = attr: cultionet.__version__
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific :: Agriculture
    Topic :: Scientific :: Cropland
    Topic :: Scientific :: Neural Network
    Topic :: Scientific :: Time series
    Topic :: Scientific :: Segmentation
    Programming Language :: Cython
    Programming Language :: Python :: 3.9 :: 3.10

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    setuptools>=65.5.1
    Cython<3,>=0.29
    numpy<2,>=1.22
python_requires =
    >=3.9,<3.11
install_requires =
    attrs>=21
    frozendict>=2.2
    frozenlist>=1.3
    numpy<2,>=1.22
    scipy>=1.5
    pandas>=1
    geopandas>=0.10
    rasterio<2,>=1.3
    shapely>=1.8
    scikit-image>=0.19
    opencv-python>=4.5.5
    decorator==4.4.2
    rtree>=0.9.7
    graphviz>=0.19
    tqdm>=4.62
    pyDeprecate==0.3.1
    future>=0.17.1
    tensorboard>=2.2
    PyYAML>=5.1
    lightning>=2.2
    torchmetrics>=0.10
    einops>=0.7
    ray<=2.1,>=2
    pyarrow>=11
    typing-extensions
    lz4
    rich-argparse
    pyogrio>=0.7
    kornia>=0.7
    geowombat@git+https://github.com/jgrss/geowombat.git
    tsaug@git+https://github.com/jgrss/tsaug.git
    pygrts@git+https://github.com/jgrss/pygrts.git@v1.4.1
    setuptools>=65.5.1
    Cython<3,>=0.29

[options.extras_require]
docs = numpydoc
    sphinx
    sphinx-automodapi
test = black
    flake8
    docformatter
    pytest

[options.entry_points]
console_scripts =
    cultionet = cultionet.scripts.cultionet:main

[options.packages.find]
where=src
exclude=
    data
    notebooks
    tests

[options.package_data]
* = *.md, *.txt
cultionet = scripts/*.yml
